added koral files

--- a/harm.in.dist
+++ b/harm.in.dist
@@ -1,7 +1,94 @@
-&harm
- dfile='dump',
- hfile='dump040',
- nt=1,
- indf=40,
+&geodata
+ standard=2,
+ mumin=0.1,
+ mumax=1.0,
+ nmu=10,
+ phi0=-0.5,
+ spin=0.998,
+ uout=0.04,
+ uin=1.0,
+ rcut=1.0,
+ nrotype=2,
+ gridvals=-25.0,25.0,-25.0,25.0,
+ nn=100,100,1,
+ i1=1,
+ i2=10000,
+ extra=0,
+ debug=0,
 /
- 
+&fluiddata
+ fname='THINDISK',
+ dt=5.0,
+ nt=1,
+ nload=1,
+ nmdot=1,
+ mdotmin=1.5e+15,
+ mdotmax=1.5e+15,
+/
+&emisdata
+ ename='BB',
+ mbh=10.0,
+ nfreq=1,
+ fmin=1e+17,
+ fmax=3e+19,
+ muval=0.25,
+ gmin=100,
+ gmax=100000.0,
+ p1=3.5,
+ p2=3.5,
+ jetalpha=0.02,
+ stype='const',
+ delta=1.0,
+ nweights=1,
+ coefindx=1,1,1,1,1,1,1,
+/
+&general
+ use_geokerr=T,
+ nvals=1,
+ iname='lsoda',
+ cflag=1,
+/
+&harm
+ fdfile='fieldline',
+ fgfile='dump0000rr2.bin',
+ fhfile='dump040',
+ fnt=1,
+ fnfiles=1,
+ findf=5206,
+ fjonfix=1,
+ foffset=0,
+ fsim='thickdiskrr2',
+ fdindf=1,
+ fmagcrit=0,
+/
+&analytic
+ fnw=500,
+ fwmin=0.0001,
+ fwmax=10000.0,
+ fnfreq_tab=100,
+ ffmin=3.33333333333e+16,
+ ffmax=9e+19,
+ frmax=10000.0,
+ fnr=500,
+ fsigt=0.4,
+ ffcol=1.7,
+ frspot=1.5,
+ fr0spot=6.0,
+ fn0spot=10000.0,
+ ftscl=30.0,
+ frscl=6.0,
+ fmdot=0.1,
+ fnscl=30000000.0,
+ fnnthscl=80000.0,
+ fnnthp=2.9,
+ fbeta=10.0,
+ fbl06=0,
+ fnp=0.0,
+ ftp=0.0,
+ frin=-1.0,
+ frout=100000000.0,
+ fthin=-10.0,
+ fthout=10.0,
+ fphiin=0.0,
+ fphiout=10000.0,
+/
